--- a/build.yaml
+++ b/build.yaml
@@ -17,4 +17,8 @@ include:
     shield: bsag_nine_nano
   - board: nice_nano_v2
     shield: settings_reset
+  - board: seeeduino_xiao_ble
+    shield: xiao_ble_testpins
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
 
