Adding new experimental testpins shield for the AliExpress-special "Supermini nRF52840" which seems to present itself as board "arduino_nano_33_ble" (once I've replaced the bootloader, naturally).  Let's try this.

--- a/build.yaml
+++ b/build.yaml
@@ -21,4 +21,5 @@ include:
     shield: xiao_ble_testpins
   - board: seeeduino_xiao_ble
     shield: settings_reset
-
+  - board: arduino_nano_33_ble
+    shield: supermini_testpins
