--- a/build.yaml
+++ b/build.yaml
@@ -21,5 +21,5 @@ include:
     shield: xiao_ble_testpins
   - board: seeeduino_xiao_ble
     shield: settings_reset
-  - board: arduino_nano_33_ble
+  - board: nice_nano_v2
     shield: supermini_testpins
